<resources>
    <string name="app_name">SmartDNS Client</string>
    <string name="no_wifi">If you are on 3G/4G/LTE unfortunately you can not use Smart DNS Proxy. You have to be connected to a Wireless network.</string>
    <string name="feel_freedom">Start SmartDNS</string>
    <string name="ok">OK</string>
    <string name="dns_1">DNS 1</string>
    <string name="dns_2">DNS 2</string>
    <string name="powered_by">Powered by <a href="https://www.github.com/icapurro">Ignacio Capurro</a></string>
    <string name="powered_by_tv">Powered by Ignacio Capurro</string>
    <string name="smartdns_service_id">SmartDNS Service ID</string>
    <string name="smartdns_started">SmartDNS started. Enjoy.</string>
    <string name="instructions_title">Usage instructions</string>
    <string name="instructions_body">This is an android client application for the
        www.smartdnsproxy.com service. You will be able to select the primary and secondary DNS
        servers and also trigger the IP update automatically at connection time. To trigger the IP
        update you will need to obtain the service id associated with your account from
        https://www.smartdnsproxy.com/MyAccount/API</string>
    <string name="dont_ask_again">Don\'t show this information again</string>
</resources>
