<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/form_layout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinner_dns_1"
        android:nextFocusDown="@+id/spinner_dns_2"
        android:nextFocusRight="@+id/button_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dns_1"
        android:padding="10dp"
        app:met_baseColor="@color/icons"
        app:met_textColorHint="@color/blue_primary_dark"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="14sp"  />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinner_dns_2"
        android:nextFocusDown="@+id/text_service_id"
        android:nextFocusRight="@+id/button_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dns_2"
        android:padding="10dp"
        app:met_baseColor="@color/icons"
        app:met_textColorHint="@color/blue_primary_dark"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="14sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/text_service_id"
        android:nextFocusDown="@+id/button_connect"
        android:nextFocusRight="@+id/button_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smartdns_service_id"
        android:padding="10dp"
        android:textSize="18sp"
        app:met_baseColor="@color/icons"
        app:met_textColorHint="@color/blue_primary_dark"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="15"
        app:met_singleLineEllipsis="true" />

</LinearLayout>